syntax = "proto3";

package users.v1;

option go_package = "pkg/grpc/users.v1";

service PublicUserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
}

service InternalUserService {
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {};
    rpc AssignAdmin(AssignAdminRequest) returns (AssignAdminResponse) {};
    rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse) {};
    rpc BanUser(BanUserRequest) returns (BanUserResponse) {};
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string message = 2;
}

message GetProfileRequest {}

message GetProfileResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
}

message AssignAdminRequest {
    string user_id = 1; 
}

message AssignAdminResponse {
    string message = 1;
}

message CreateEmployeeRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message CreateEmployeeResponse {
    string message = 1;
    string user_id = 2;
}

message BanUserRequest {
    string user_id = 1;
}

message BanUserResponse {
    string message = 1;
}